Fix index.css on FireFox

--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ body {
     background: linear-gradient(-45deg, #40e7fd, #40a8fd, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 13s ease infinite;
+    min-height: 100vh;
     display: flex;
 }
 
@@ -90,11 +91,6 @@ a:hover { color: #4069fd; }
         text-align: center;
     }
     
-    .content {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
 }
 
 /* Mobile */
